--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,3 +1,5 @@
+<h1><%= @job.title %> at <%= @job.company.name %></h1><br />
+
 Title: <%= @job.title %>
 <br>
 
@@ -9,5 +11,8 @@ Level of Interest: <%= @job.level_of_interest %>
 
 City: <%= @job.city %>
 <br>
+<%= button_to "Edit Job", edit_company_job_path %>
+<%= button_to "Delete Job", company_job_path, method: "delete" %><br />
 
-Company: <%= link_to @job.company.name, company_path(@job.company) %>
+Company: <%= link_to @job.company.name, company_path(@job.company) %><br />
+<%= link_to "Back to Company Directory", companies_path %>
