--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,5 +1,8 @@
-All Jobs for <strong><%= @company.name %></strong>
+All Jobs for <strong><%= @company.name %></strong><br />
+<%= link_to "Add a Job", new_company_job_path %>
 
 <% @jobs.each do |job| %>
   <ul><%= job.title %> at <%= job.company.name %></ul>
-<% end %>
+<% end %><br />
+
+<%= link_to "Back to Company Directory", companies_path %>
