added job-description relationship; need to fix user_sees_job and user_deletes_job spec; need to add category validation on job model

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -3,7 +3,7 @@
 <% @companies.each do |company| %>
   <div class=company_<%= company.id %>>
     <strong><%= link_to company.name, company_path(company) %></strong><br>
-    <%= button_to "Edit", edit_company_path(company) %>
+    <%= button_to "Edit", edit_company_path(company), method: "get" %>
     <%= button_to "Delete", company_path(company), method: "delete" %>
   </div>
 <% end %><br>
