--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,15 +1,20 @@
 <%= form_for ([@company, @job]) do |f| %>
+
+  <%= f.label :category %>
+  <%= f.collection_select(:category_id, Category.all, :id, :title) %><br />
+
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title %><br />
 
   <%= f.label :description %>
-  <%= f.text_field :description %>
+  <%= f.text_field :description %><br />
 
   <%= f.label :level_of_interest %>
-  <%= f.number_field :level_of_interest %>
+  <%= f.number_field :level_of_interest %><br />
 
   <%= f.label :city %>
-  <%= f.text_field :city %>
+  <%= f.text_field :city %><br />
 
   <%= f.submit %>
-<% end %>
+
+  <% end %>
