--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,7 +2,9 @@ All Jobs for <strong><%= @company.name %></strong><br />
 <%= link_to "Add a Job", new_company_job_path %>
 
 <% @jobs.each do |job| %>
-  <ul><%= job.title %> at <%= job.company.name %></ul>
+  <ul><%= link_to job.title, company_job_path(@company, job) %> at <%= job.company.name %>
+  <%= button_to "Delete", company_job_path(@company, job), method: "delete" %></ul>
+
 <% end %><br />
 
 <%= link_to "Back to Company Directory", companies_path %>
