completed job-category relationship with show page; seed file not sampling category_id correctly

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,8 @@
 <h2><%= @category.title %> jobs</h2><br />
 
-show each job here<br />
+<% @jobs.each do |job| %>
+<%= link_to job.title, company_job_path(:company_id, job) %><br />
+<% end %>
+
 
 <%= link_to "Back to Categories List", categories_path %>
