--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for ([@company, @job]) do |f| %>
 
   <%= f.label :category %>
-  <%= f.collection_select(:category_id, Category.all, :id, :title) %><br />
+  <%= f.collection_select(:category_id, @categories, :id, :title) %><br />
 
   <%= f.label :title %>
   <%= f.text_field :title %><br />
