--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,7 +2,7 @@
 
 <% @jobs.each do |job| %>
 <%= link_to job.title, company_job_path(:company_id, job) %><br />
-<% end %>
+<% end %><br />
 
 
 <%= link_to "Back to Categories List", categories_path %>
