started comments but create/redirect is not functioning

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -16,6 +16,9 @@ City: <%= @job.city %>
 <br>
 <%= button_to "Edit Job", edit_company_job_path, method: "get" %>
 <%= button_to "Delete Job", company_job_path, method: "delete" %><br />
+<h3>Comments:</h3>
+<%= render partial: 'jobs/comment', collection: @job.comments.reverse %>
+<%= render partial: 'comments/form' %>
 
 Company: <%= link_to @job.company.name, company_path(@job.company) %><br />
 <%= link_to "Back to Company Directory", companies_path %>
