--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,8 @@
 <h4>Post a Comment</h4>
 
-<%= form_for new_company_job_comment_path(@job.company, @job.id) do |f| %>
+<%#= form_for new_company_job_comment_path(@job.company, @job.id) do |f| %>
+<%#= form_for new_job_comment_path(@job.company, @job.id) do |f| %>
+<%= form_for [@job, @comment] do |f| %>
 <p>
   <%= f.label :author_name, "Your Name" %><br />
   <%= f.text_field :author_name %>
