--- a/app/views/jobs/_comment.html.erb
+++ b/app/views/jobs/_comment.html.erb
@@ -1,5 +1,8 @@
 <div>
   <h4>Comment by <%= comment.author_name %></h4>
   <p class='comment'><%= comment.body %></p>
-  <p>Posted <%= time_ago_in_words(comment.created_at) %></p>
+  <p><small>Posted <%= time_ago_in_words(comment.created_at) %> ago</small></p>
+  <%#= button_to "Edit", edit_category_path(category), method: "get" %>
+  <%= button_to "Delete", job_comment_path(@job, comment.id), method: "delete" %><br />
+
 </div>
