--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,10 +1,5 @@
-All Jobs for <strong><%= @company.name %></strong><br />
-<%= link_to "Add a Job", new_company_job_path %>
+<h1>Jobs</h1>
 
-<% @jobs.each do |job| %>
-  <ul><%= link_to job.title, company_job_path(@company, job) %> at <%= job.company.name %>
-  <%= button_to "Delete", company_job_path(@company, job), method: "delete" %></ul>
-
-<% end %><br />
-<%= link_to "View Contacts at #{@company.name}", company_contacts_path(@company) %><br /><br />
-<%= link_to "Back to Company Directory", companies_path %>
+<%= @jobs.each do |job| %>
+<%= job.city %>
+<% end %>
